# repr

./: .drone.yml  .gitignore  .ocamlformat  .travis.yml  CHANGES.md  LICENSE.md  Makefile  README.md  README_PPX.md  dune-project  index.html  odoc.css  ppx_repr.opam  repr-bench.opam  repr-fuzz.opam  repr.opam  repr.opam.template  rfc.org
bench/: dune  main.ml  output.ml
documentation/: documentation.org
fuzz/: dune  main.ml
fuzz/rewriter/: main.ml
ppx_repr/: index.html
ppx_repr/Ppx_repr/: index.html
ppx_repr/Ppx_repr_lib/: index.html
ppx_repr/Ppx_repr_lib/Algebraic/: index.html
ppx_repr/Ppx_repr_lib/Algebraic_intf/: index.html
ppx_repr/Ppx_repr_lib/Attributes/: index.html
ppx_repr/Ppx_repr_lib/Attributes_intf/: index.html
ppx_repr/Ppx_repr_lib/Dsl/: index.html
ppx_repr/Ppx_repr_lib/Engine/: index.html
ppx_repr/Ppx_repr_lib/Engine_intf/: index.html
ppx_repr/Ppx_repr_lib/Meta_deriving/: index.html
ppx_repr/Ppx_repr_lib/Monad/: index.html
ppx_repr/Ppx_repr_lib/Monad_intf/: index.html
ppx_repr/Ppx_repr_lib/Plugins/: index.html
ppx_repr/Ppx_repr_lib/Ppx_irmin_lib/: index.html
ppx_repr/Ppx_repr_lib/Raise/: index.html
ppx_repr/Ppx_repr_lib/Utils/: index.html
ppx_repr/Ppx_repr_lib__/: index.html
ppx_repr/Ppx_repr_lib__Algebraic/: index.html
ppx_repr/Ppx_repr_lib__Algebraic/Located/: index.html
ppx_repr/Ppx_repr_lib__Algebraic/module-type-S/: index.html
ppx_repr/Ppx_repr_lib__Algebraic_intf/: index.html
ppx_repr/Ppx_repr_lib__Algebraic_intf/Typ/: index.html
ppx_repr/Ppx_repr_lib__Algebraic_intf/module-type-Algebraic/: index.html
ppx_repr/Ppx_repr_lib__Algebraic_intf/module-type-S/: index.html
ppx_repr/Ppx_repr_lib__Attributes/: index.html
ppx_repr/Ppx_repr_lib__Attributes/Make/: index.html
ppx_repr/Ppx_repr_lib__Attributes/module-type-S/: index.html
ppx_repr/Ppx_repr_lib__Attributes_intf/: index.html
ppx_repr/Ppx_repr_lib__Attributes_intf/module-type-Attributes/: index.html
ppx_repr/Ppx_repr_lib__Attributes_intf/module-type-S/: index.html
ppx_repr/Ppx_repr_lib__Dsl/: index.html
ppx_repr/Ppx_repr_lib__Engine/: index.html
ppx_repr/Ppx_repr_lib__Engine/Located/: index.html
ppx_repr/Ppx_repr_lib__Engine/module-type-S/: index.html
ppx_repr/Ppx_repr_lib__Engine_intf/: index.html
ppx_repr/Ppx_repr_lib__Engine_intf/module-type-Engine/: index.html
ppx_repr/Ppx_repr_lib__Engine_intf/module-type-S/: index.html
ppx_repr/Ppx_repr_lib__Meta_deriving/: index.html
ppx_repr/Ppx_repr_lib__Monad/: index.html
ppx_repr/Ppx_repr_lib__Monad/Reader/: index.html
ppx_repr/Ppx_repr_lib__Monad/module-type-S/: index.html
ppx_repr/Ppx_repr_lib__Monad_intf/: index.html
ppx_repr/Ppx_repr_lib__Monad_intf/module-type-Monad/: index.html
ppx_repr/Ppx_repr_lib__Monad_intf/module-type-S/: index.html
ppx_repr/Ppx_repr_lib__Plugins/: index.html
ppx_repr/Ppx_repr_lib__Plugins/Make/: index.html
ppx_repr/Ppx_repr_lib__Ppx_irmin_lib/: index.html
ppx_repr/Ppx_repr_lib__Raise/: index.html
ppx_repr/Ppx_repr_lib__Raise/Unsupported/: index.html
ppx_repr/Ppx_repr_lib__Utils/: index.html
ppx_repr/Ppx_repr_lib__Utils/List/: index.html
ppx_repr/Ppx_repr_lib__Utils/Make/: index.html
ppx_repr/Ppx_repr_lib__Utils/Option/: index.html
repr/: index.html
repr-bench/: index.html
repr-fuzz/: index.html
repr-fuzz/Main/: index.html
repr/Repr/: index.html
repr/Repr/Attribute/: index.html
repr/Repr/Binary/: index.html
repr/Repr/Json/: index.html
repr/Repr/Of_map/: index.html
repr/Repr/Of_set/: index.html
repr/Repr/Size/: index.html
repr/Repr/Staging/: index.html
repr/Repr/Unboxed/: index.html
repr/Repr/Witness/: index.html
repr/Repr/module-type-DSL/: index.html
repr/Repr/module-type-S/: index.html
repr/Repr__/: index.html
repr/Repr__/Attribute/: index.html
repr/Repr__/Attribute_intf/: index.html
repr/Repr__/Binary_codec/: index.html
repr/Repr__/Higher/: index.html
repr/Repr__Attribute/: index.html
repr/Repr__Attribute_intf/: index.html
repr/Repr__Binary/: index.html
repr/Repr__Binary_codec/: index.html
repr/Repr__Binary_codec_intf/: index.html
repr/Repr__Binary_intf/: index.html
repr/Repr__Higher/: index.html
repr/Repr__Size/: index.html
repr/Repr__Staging/: index.html
repr/Repr__Type/: index.html
repr/Repr__Type_binary/: index.html
repr/Repr__Type_core/: index.html
repr/Repr__Type_core_intf/: index.html
repr/Repr__Type_intf/: index.html
repr/Repr__Type_json/: index.html
repr/Repr__Type_ordered/: index.html
repr/Repr__Type_pp/: index.html
repr/Repr__Type_random/: index.html
repr/Repr__Type_size/: index.html
repr/Repr__Utils/: index.html
repr/Repr__Witness/: index.html
src/repr/: attribute.ml  attribute.mli  attribute_intf.ml  binary.ml  binary.mli  binary_codec.ml  binary_codec.mli  binary_codec_intf.ml  binary_intf.ml  dune  higher.ml  repr.ml  size.ml  staging.ml  staging.mli  type.ml  type.mli  type_attribute.ml  type_attribute.mli  type_binary.ml  type_binary.mli  type_binary_intf.ml  type_combinators.ml  type_combinators.mli  type_combinators_intf.ml  type_core.ml  type_core_intf.ml  type_intf.ml  type_json.ml  type_json.mli  type_ordered.ml  type_ordered.mli  type_pp.ml  type_pp.mli  type_random.ml  type_random.mli  type_size.ml  type_size.mli  utils.ml  utils.mli  (+4 more)
test/ppx_repr/deriver/passing/: alias.expected  alias.ml  arguments.expected  arguments.ml  as_alias.expected  as_alias.ml  basic.expected  basic.ml  composite.expected  composite.ml  dune  dune.inc  extension.expected  extension.ml  json_module.expected  json_module.ml  lib_relocated.expected  lib_relocated.ml  meta_deriving.expected  meta_deriving.ml  module.expected  module.ml  nobuiltin.expected  nobuiltin.ml  nonrec.expected  nonrec.ml  polyvariant.expected  polyvariant.ml  record.expected  record.ml  recursive.expected  recursive.ml  signature.expected  signature.ml  tuple_deep.expected  tuple_deep.ml  type_params.expected  type_params.ml  variant.expected  variant.ml
test/repr/: dune  import.ml  main.ml  test_bin_shape.ml  test_binary_shape.ml  test_pre_hash.ml  test_size_of.ml
(+444 files in other folders)
