(executable
 (name main)
 (public_name repr-fuzz)
 (package repr-fuzz)
 (libraries crowbar repr)
 (preprocess
  (pps repr-fuzz.rewriter)))

(rule
 (alias runtest)
 (package repr-fuzz)
 (deps main.exe)
 (action progn))

;; Start fuzzing when calling `dune build @fuzz`.

(rule
 (alias fuzz)
 (deps
  (source_tree ./input))
 (action
  (run bun -v --input=input --output=output -- ./%{exe:main.exe})))
