(executable
 (name pp)
 (modules pp)
 (libraries ppx_repr ppxlib))

(include dune.inc)

(rule
 (targets dune.inc.gen)
 (deps
  (source_tree .))
 (action
  (with-stdout-to
   %{targets}
   (run ../gen_dune_rules.exe))))

(rule
 (alias runtest)
 (package ppx_repr)
 (action
  (diff dune.inc dune.inc.gen)))
